# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import resourcesRouter from "./resources";
 import workshopsRouter from "./workshops";
 import communityRouter from "./community";
+import subscribeRouter from "./subscribe";
 
 const router: IRouter = Router();
 
@@ -10,5 +11,6 @@ router.use(healthRouter);
 router.use(resourcesRouter);
 router.use(workshopsRouter);
 router.use(communityRouter);
+router.use(subscribeRouter);
 
 export default router;
